# ontology-cplusplus

./: CMakeLists.txt  README.md
include/: Calculus.hpp  Constant.hpp  Function.hpp  IFunction.hpp  Linear.hpp  calculus.hpp  ontology.hpp
include/BaseFunctions/: Constant.hpp  Linear.hpp
include/Core/: Function.hpp
include/Core/BaseFunctions/: Constant.hpp
include/Core/Operations/: Multiplication.hpp
include/Operations/: Multiplication.hpp  Negative.hpp  Sum.hpp
include/core/: constant.hpp  cosine.hpp  function.hpp  linear.hpp  logarithm.hpp  multiplication.hpp  natural_logarithm.hpp  negative.hpp  sine.hpp  sum.hpp
include/core/base_functions/: constant.hpp  linear.hpp
include/core/logarithms/: logarithm.hpp  natural_logarithm.hpp
include/core/operations/: division.hpp  multiplication.hpp  negative.hpp  sum.hpp
include/core/trigonometry/: cosine.hpp  sine.hpp
src/: Calculus.cpp  Constant.cpp  Function.cpp  Linear.cpp  calculus.cpp  ontology.cpp
src/BaseFunctions/: Constant.cpp  Linear.cpp
src/Core/: Function.cpp
src/Core/BaseFunctions/: Constant.cpp  Linear.cpp
src/Core/Operations/: Multiplication.cpp  Negative.cpp  Sum.cpp
src/Operations/: Multiplication.cpp  Negative.cpp  Sum.cpp
src/core/: constant.cpp  cosine.cpp  function.cpp  linear.cpp  logarithm.cpp  multiplication.cpp  natural_logarithm.cpp  negative.cpp  sine.cpp  sum.cpp
src/core/base_functions/: constant.cpp  linear.cpp
src/core/logarithms/: logarithm.cpp  natural_logarithm.cpp
src/core/operations/: division.cpp  multiplication.cpp  negative.cpp  sum.cpp
src/core/trigonometry/: cosine.cpp  sine.cpp
tests/: BaseFunctionsTest.cpp  CMakeLists.txt  CalculusTest.cpp  ConstantTest.cpp  LinearTest.cpp  OperationsTest.cpp  calculus_test.cpp  operations_test.cpp
